--- a/app/src/main/res/layout/activity_isi.xml
+++ b/app/src/main/res/layout/activity_isi.xml
@@ -12,12 +12,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:textSize="30sp">
+        android:textSize="30sp"
+        android:layout_marginBottom="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:text="Ahmad Yani">
     </TextView>
     <TextView
         android:id="@+id/tv_isi"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:text="blablabla">
     </TextView>
 
 </LinearLayout>
